📚 Automated Documentation Update (#534)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Michael Assraf <michael@flamingo.cx>